[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/interface/settings/Settings.gd" type="Script" id=1]
[ext_resource path="res://icons/dir.png" type="Texture" id=2]


[node name="Settings" type="PanelContainer"]
margin_left = 175.0
margin_top = 72.0
margin_right = 425.0
margin_bottom = 328.0
rect_min_size = Vector2( 250, 0 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Body" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 243.0
margin_bottom = 249.0

[node name="Header" type="Label" parent="Body"]
margin_right = 236.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Settings"
align = 1

[node name="Content" type="ScrollContainer" parent="Body"]
margin_top = 18.0
margin_right = 236.0
margin_bottom = 218.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="List" type="VBoxContainer" parent="Body/Content"]
margin_right = 236.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Server" type="PanelContainer" parent="Body/Content/List"]
margin_right = 236.0
margin_bottom = 56.0
size_flags_horizontal = 3

[node name="Body" type="VBoxContainer" parent="Body/Content/List/Server"]
margin_left = 7.0
margin_top = 7.0
margin_right = 229.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Header" type="Label" parent="Body/Content/List/Server/Body"]
margin_right = 222.0
margin_bottom = 14.0
text = "Server"

[node name="Paramaters" type="HBoxContainer" parent="Body/Content/List/Server/Body"]
margin_top = 18.0
margin_right = 222.0
margin_bottom = 42.0

[node name="Hostname" type="LineEdit" parent="Body/Content/List/Server/Body/Paramaters"]
margin_right = 152.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "hostname"

[node name="Colon" type="Label" parent="Body/Content/List/Server/Body/Paramaters"]
margin_left = 156.0
margin_top = 5.0
margin_right = 160.0
margin_bottom = 19.0
text = ":"

[node name="Port" type="LineEdit" parent="Body/Content/List/Server/Body/Paramaters"]
margin_left = 164.0
margin_right = 222.0
margin_bottom = 24.0
placeholder_text = "port"

[node name="Nickname" type="PanelContainer" parent="Body/Content/List"]
margin_top = 60.0
margin_right = 236.0
margin_bottom = 116.0

[node name="Body" type="VBoxContainer" parent="Body/Content/List/Nickname"]
margin_left = 7.0
margin_top = 7.0
margin_right = 229.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Header" type="Label" parent="Body/Content/List/Nickname/Body"]
margin_right = 222.0
margin_bottom = 14.0
text = "Nickname"

[node name="Nickname" type="LineEdit" parent="Body/Content/List/Nickname/Body"]
margin_top = 18.0
margin_right = 222.0
margin_bottom = 42.0
placeholder_text = "someguy55"

[node name="DownloadDir" type="PanelContainer" parent="Body/Content/List"]
margin_top = 120.0
margin_right = 236.0
margin_bottom = 176.0

[node name="Body" type="VBoxContainer" parent="Body/Content/List/DownloadDir"]
margin_left = 7.0
margin_top = 7.0
margin_right = 229.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Header" type="Label" parent="Body/Content/List/DownloadDir/Body"]
margin_right = 222.0
margin_bottom = 14.0
text = "Download directory"

[node name="Parameters" type="HBoxContainer" parent="Body/Content/List/DownloadDir/Body"]
margin_top = 18.0
margin_right = 222.0
margin_bottom = 42.0

[node name="Directory" type="LineEdit" parent="Body/Content/List/DownloadDir/Body/Parameters"]
margin_right = 190.0
margin_bottom = 24.0
size_flags_horizontal = 3
editable = false
expand_to_text_length = true

[node name="ChooseDir" type="Button" parent="Body/Content/List/DownloadDir/Body/Parameters"]
margin_left = 194.0
margin_right = 222.0
margin_bottom = 24.0
icon = ExtResource( 2 )

[node name="Save" type="Button" parent="Body"]
margin_left = 97.0
margin_top = 222.0
margin_right = 138.0
margin_bottom = 242.0
size_flags_horizontal = 4
text = "Save"
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="text_changed" from="Body/Content/List/Server/Body/Paramaters/Hostname" to="." method="_on_Hostname_text_changed"]
[connection signal="text_changed" from="Body/Content/List/Server/Body/Paramaters/Port" to="." method="_on_Port_text_changed"]
[connection signal="text_changed" from="Body/Content/List/Nickname/Body/Nickname" to="." method="_on_Nickname_text_changed"]
[connection signal="pressed" from="Body/Content/List/DownloadDir/Body/Parameters/ChooseDir" to="." method="_on_ChooseDir_pressed"]
[connection signal="pressed" from="Body/Save" to="." method="_on_Save_pressed"]
